This branch adds all course functionality
This includes both parts C2 and C3. It displays the list of 6 courses.
You can add courses (up to 6 total), you can edit and delete them.
You can click them to see the detailed view of each as well.

--- a/MobileApp_C971_LAP2_PaulMilke/MobileApp_C971_LAP2_PaulMilke.csproj
+++ b/MobileApp_C971_LAP2_PaulMilke/MobileApp_C971_LAP2_PaulMilke.csproj
@@ -64,6 +64,9 @@
 	  <MauiXaml Update="Views\CoursesPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\EditCoursePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
