Adds multiple infrastructure items around assessments.
Includes new table for assessments. Updates to navigation to allow information to pass to
the add/edit assessment page. Includes new xaml to handle adding assessments.

--- a/MobileApp_C971_LAP2_PaulMilke/MobileApp_C971_LAP2_PaulMilke.csproj
+++ b/MobileApp_C971_LAP2_PaulMilke/MobileApp_C971_LAP2_PaulMilke.csproj
@@ -66,6 +66,9 @@
 	  <MauiXaml Update="Views\AddNewTermPopup.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\AssessmentEditAdd.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\CoursesPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
