Enables new search feature for terms and courses.
Includes new search page which is navigated to by the button on the top toolbar.
On the page you can search for either terms or courses. From the list returned you can then
navigate to the found item.

--- a/MobileApp_C971_LAP2_PaulMilke/MobileApp_C971_LAP2_PaulMilke.csproj
+++ b/MobileApp_C971_LAP2_PaulMilke/MobileApp_C971_LAP2_PaulMilke.csproj
@@ -75,6 +75,9 @@
 	  <MauiXaml Update="Views\EditCoursePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\SearchPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
